--- a/htmlslidy.org
+++ b/htmlslidy.org
@@ -1,10 +1,23 @@
-# Turn off the title as it interfers with the text. 
+# Revised bindings for export variables to work with new exporter
+# Giovanni Moretti (I think) Sept 5, 2014
+
+
+# Turn off the title as it interferes with the text. 
 #+title:
 #+OPTIONS: H:1 num:nil toc:nil \n:nil @:t ::t |:t ^:t f:t LaTeX:t 
+
 #+BIND: org-html-head-include-default-style nil
 #+BIND: org-html-head-include-scripts nil
-#+BIND: org-html-head "<!-- configuration parameters --> <meta name='duration' content='5' /> <meta name='font-size-adjustment' content='2' /> <!-- style sheet links --> <link rel='stylesheet' href='slidy.css' type='text/css' /> <!-- HTMTLSLIDY JS --> <script src='htmlslidy-slides.js' type='text/javascript'></script> <script src='slidy.js' type='text/javascript'></script> <script src='jquery.js' type='text/javascript'></script> <script src='org-slidy-slides.js' type='text/javascript'></script>"
+
+#+BIND: org-html-head "<!-- configuration parameters --> <meta name='duration' content='5' /> <meta name='font-size-adjustment' content='4' /> <!-- style sheet links --> <link rel='stylesheet' href='slidyFiles/slidy.css' type='text/css' /><link rel='stylesheet' href='slidyFiles/slidyGM.css' type='text/css' /> <!-- HTMTLSLIDY JS --> <script src='slidyFiles/htmlslidy-slides.js' type='text/javascript'></script> <script src='slidyFiles/slidy.js'  type='text/javascript'> </script> <script src='slidyFiles/jquery.js' type='text/javascript'> </script> <script src='slidyFiles/org-slidy-slides.js' type='text/javascript'></script>"
+
 #+BIND: org-html-head-extra ""
-#+BIND: org-html-preamble org-htmlslidy-html-preamble-function
+
+#   STOP preamble-function from running - it creates an annoying title slide
+#   BIND: org-html-preamble org-htmlslidy-html-preamble-function
+
+#+BIND: org-html-preamble nil     
+
 #+BIND: org-html-postamble org-htmlslidy-html-postamble-function
+
 
