--- a/htmlslidy.org
+++ b/htmlslidy.org
@@ -4,12 +4,12 @@
 
 # Turn off the title as it interferes with the text. 
 #+title:
-#+OPTIONS: H:1 num:nil toc:nil \n:nil @:t ::t |:t ^:t f:t LaTeX:t 
+#+OPTIONS: H:5 num:nil toc:nil \n:nil @:t ::t |:t ^:{} f:nil LaTeX:t 
 
 #+BIND: org-html-head-include-default-style nil
 #+BIND: org-html-head-include-scripts nil
 
-#+BIND: org-html-head "<!-- configuration parameters --> <meta name='duration' content='5' /> <meta name='font-size-adjustment' content='4' /> <!-- style sheet links --> <link rel='stylesheet' href='slidyFiles/slidy.css' type='text/css' /><link rel='stylesheet' href='slidyFiles/slidyGM.css' type='text/css' /> <!-- HTMTLSLIDY JS --> <script src='slidyFiles/htmlslidy-slides.js' type='text/javascript'></script> <script src='slidyFiles/slidy.js'  type='text/javascript'> </script> <script src='slidyFiles/jquery.js' type='text/javascript'> </script> <script src='slidyFiles/org-slidy-slides.js' type='text/javascript'></script>"
+#+BIND: org-html-head "<!-- configuration parameters --> <meta name='font-size-adjustment' content='4' /> <!-- style sheet links --> <link rel='stylesheet' href='slidyFiles/slidy.css' type='text/css' /><link rel='stylesheet' href='slidyFiles/slidyGM.css' type='text/css' /> <!-- HTMTLSLIDY JS --> </script> <script src='slidyFiles/slidy.js'  type='text/javascript'> </script> <script src='slidyFiles/jquery.js' type='text/javascript'> </script> <script src='slidyFiles/org-slidy-slides.js' type='text/javascript'></script>"
 
 #+BIND: org-html-head-extra ""
 
